Fix Space ID support

--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -249,6 +249,13 @@
         color: #fff;
       }
     }
+
+    &.spaceid {
+      .bg-spaceid {
+        background: #71EBAA;
+        color: #fff;
+      }
+    }
   }
 
   .nfts {
