Update loading style

--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -103,10 +103,7 @@
     }
   
     .loading-container {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      margin-top: 4rem;
     }
   }
 
