--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -138,16 +138,145 @@
 
     .platform-action {
       margin-top: auto;
-      
+
       .btn {
         display: none;
         position: relative;
       }
     }
   }
-  .profile-collection-widgets{
+
+  .profile-collection-widgets {
     min-width: 50%;
     max-width: 50%;
+    height: auto;
+    max-height: 30rem;
+
+    .widgets-collection-list {
+      display: flex;
+      flex-flow: column wrap;
+      height: 10rem;
+      width: 100%;
+      overflow-x: scroll;
+
+      .collection-item {
+        background: #fff;
+        border-radius: .6rem;
+        height: 4.5rem;
+        padding: .25rem;
+        transition: all .25s ease-in-out;
+        width: 4.5rem;
+
+        &::after {
+          bottom: auto;
+          top: 100%;
+          transform: translate(-50%, -$unit-2);
+        }
+
+        &:focus,
+        &:hover {
+          background: lighten($bg-color, 2%);
+
+          &::after {
+            transform: translate(-50%, $unit-1);
+          }
+        }
+
+        &.active {
+          background: $bg-color;
+
+          .img-responsive {
+            box-shadow: 0 .1rem .4rem rgba($dark-color, .25);
+          }
+        }
+
+        .collection-img {
+          border-radius: .5rem;
+          height: 100%;
+          width: 100%;
+
+          .img-responsive {
+            border-radius: .5rem;
+            box-shadow: 0 .1rem .4rem rgba($dark-color, .1);
+            font-size: 1.6rem;
+            height: 100%;
+            object-fit: cover;
+            width: 100%;
+          }
+        }
+      }
+
+      .collection-switcher {
+        background: #fff;
+        box-shadow: 0 .1rem 1rem rgba($dark-color, .1);
+        user-select: none;
+        height: 3.5rem;
+        box-sizing: border-box;
+
+        .collection-list {
+          display: flex;
+          gap: .1rem;
+          height: 100%;
+          overflow: auto hidden;
+
+          &::-webkit-scrollbar {
+            display: none;
+          }
+
+          .collection-item {
+            background: #fff;
+            border-radius: .6rem;
+            flex: 0 0;
+            height: 3.1rem;
+            padding: .25rem;
+            transition: all .25s ease-in-out;
+            width: 3.1rem;
+
+            &::after {
+              bottom: auto;
+              top: 100%;
+              transform: translate(-50%, -$unit-2);
+            }
+
+            &:focus,
+            &:hover {
+              background: lighten($bg-color, 2%);
+
+              &::after {
+                transform: translate(-50%, $unit-1);
+              }
+            }
+
+            &.active {
+              background: $bg-color;
+
+              .img-responsive {
+                box-shadow: 0 .1rem .4rem rgba($dark-color, .25);
+              }
+            }
+
+            .collection-img {
+              border-radius: .5rem;
+              height: 2.6rem;
+              width: 2.6rem;
+
+              .img-responsive {
+                border-radius: .5rem;
+                box-shadow: 0 .1rem .4rem rgba($dark-color, .1);
+                font-size: 1.6rem;
+                height: 2.6rem;
+                object-fit: cover;
+                width: 2.6rem;
+              }
+            }
+          }
+        }
+      }
+    }
+
+
+
+
   }
 }
 
