--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -152,120 +152,7 @@
     height: auto;
     max-height: 30rem;
 
-    .nft-panel {
-      height: calc(100vh - 1rem);
-      position: fixed;
-      bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 50%;
-
-      .panel-container {
-        height: calc(100vh - 2rem);
-      }
-
-      .panel-header {
-        overflow: hidden auto;
-        padding: 1rem;
-
-        .img-container {
-          display: flex;
-          min-width: 100%;
-
-        }
-
-        .panel-header-img {
-          flex: 1 1 50%;
-          margin-right: 1rem;
-          width: 50%;
-        }
-
-        .img-responsive {
-          width: 100%;
-          border-radius: .5rem;
-        }
-
-        .collection-title {
-          align-items: center;
-          display: flex;
-          padding: 1rem 0 .5rem 0;
-
-          .collection-logo {
-            flex: 0 0 1.2rem;
-            margin-right: .25rem;
-
-            .img-responsive {
-              border-radius: .4rem;
-              box-shadow: 0 .2rem .8rem rgba($dark-color, .2);
-              font-size: 1rem;
-              height: 1.2rem;
-              width: 1.2rem;
-            }
-          }
-
-          .collection-name {
-            font-size: .65rem;
-            font-weight: 700;
-          }
-        }
-
-        .nft-header-name {
-          font-size: 1.2rem;
-          font-weight: 900;
-        }
-
-        .nft-header-actions {
-          margin-top: .5rem;
-        }
-      }
-
-      .panel-body {
-        padding: 0 1rem 1rem 1rem;
-      }
-
-      .panel-widget {
-        margin: 1rem 0;
-
-        .panel-widget-title {
-          font-size: .7rem;
-          font-weight: 900;
-          margin-bottom: .5rem;
-          text-transform: uppercase;
-        }
-
-        .panel-widget-content {
-          font-size: .6rem;
-          line-height: 1rem;
-        }
-
-        .traits-cards {
-          display: flex;
-          flex-wrap: wrap;
-          gap: .5rem;
-
-          .traits-card {
-            background: $light-color;
-            border: .05rem solid rgba(18, 18, 18, 0.08);
-            box-shadow: 0 .2rem .8rem rgba(0, 0, 0, 0.05);
-            border-radius: .4rem;
-            color: $dark-color;
-            text-transform: uppercase;
-            padding: .2rem .4rem;
-
-            .trait-type {
-              font-size: .5rem;
-              line-height: 2;
-            }
-
-            .trait-value {
-              font-weight: 700;
-              font-size: .6rem;
-              line-height: 1.5;
-            }
-          }
-        }
-      }
-    }
+   
 
     .widgets-collection-list {
       display: flex;
@@ -393,8 +280,149 @@
 
 
   }
+
+  .profile-poaps-widgets {
+    min-width: 50%;
+    max-width: 50%;
+    height: auto;
+    max-height: 30rem;
+
+    .widgets-collection-list {
+      display: flex;
+      flex-flow: column wrap;
+      height: 10rem;
+      width: 100%;
+      gap: 1rem;
+      overflow-x: scroll;
+
+      .nft-container {
+        width: 9rem;
+        min-width: 8rem;
+
+        @media screen and (max-width: $size-md) {
+          flex: 0 0 50%;
+        }
+      }
+
+    }
+  }
 }
 
+.nft-panel {
+  height: calc(100vh - 1rem);
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 50%;
+  z-index: 100;
+
+  .panel-container {
+    height: calc(100vh - 2rem);
+  }
+
+  .panel-header {
+    overflow: hidden auto;
+    padding: 1rem;
+
+    .img-container {
+      display: flex;
+      min-width: 100%;
+
+    }
+
+    .panel-header-img {
+      flex: 1 1 50%;
+      margin-right: 1rem;
+      width: 50%;
+    }
+
+    .img-responsive {
+      width: 100%;
+      border-radius: .5rem;
+    }
+
+    .collection-title {
+      align-items: center;
+      display: flex;
+      padding: 1rem 0 .5rem 0;
+
+      .collection-logo {
+        flex: 0 0 1.2rem;
+        margin-right: .25rem;
+
+        .img-responsive {
+          border-radius: .4rem;
+          box-shadow: 0 .2rem .8rem rgba($dark-color, .2);
+          font-size: 1rem;
+          height: 1.2rem;
+          width: 1.2rem;
+        }
+      }
+
+      .collection-name {
+        font-size: .65rem;
+        font-weight: 700;
+      }
+    }
+
+    .nft-header-name {
+      font-size: 1.2rem;
+      font-weight: 900;
+    }
+
+    .nft-header-actions {
+      margin-top: .5rem;
+    }
+  }
+
+  .panel-body {
+    padding: 0 1rem 1rem 1rem;
+  }
+
+  .panel-widget {
+    margin: 1rem 0;
+
+    .panel-widget-title {
+      font-size: .7rem;
+      font-weight: 900;
+      margin-bottom: .5rem;
+      text-transform: uppercase;
+    }
+
+    .panel-widget-content {
+      font-size: .6rem;
+      line-height: 1rem;
+    }
+
+    .traits-cards {
+      display: flex;
+      flex-wrap: wrap;
+      gap: .5rem;
+
+      .traits-card {
+        background: $light-color;
+        border: .05rem solid rgba(18, 18, 18, 0.08);
+        box-shadow: 0 .2rem .8rem rgba(0, 0, 0, 0.05);
+        border-radius: .4rem;
+        color: $dark-color;
+        text-transform: uppercase;
+        padding: .2rem .4rem;
+
+        .trait-type {
+          font-size: .5rem;
+          line-height: 2;
+        }
+
+        .trait-value {
+          font-weight: 700;
+          font-size: .6rem;
+          line-height: 1.5;
+        }
+      }
+    }
+  }
+}
 // Old Profile
 .profile-container {
   display: flex;
@@ -558,6 +586,7 @@
       }
     }
   }
+
 }
 
 .nft-collection {
