chroe: boundary render

--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -160,6 +160,8 @@
       height: 10rem;
       width: 100%;
       overflow-x: scroll;
+      align-items: center;
+      justify-content: center;
 
       .collection-item {
         background: #fff;
